--- a/Playbooks/Set_Switchport_Config.yml
+++ b/Playbooks/Set_Switchport_Config.yml
@@ -12,27 +12,26 @@
     - name: Configure Switch1 Port1 To Router
       cisco.meraki.devices_switch_ports:
         meraki_api_key: "{{ meraki_api_key }}"
-        meraki_base_url: https://api.meraki.com/api/v1
-        meraki_single_request_timeout: ''
-        meraki_certificate_path: ''
-        meraki_requests_proxy: true
-        meraki_wait_on_rate_limit: '60'
-        meraki_nginx_429_retry_wait_time: '60'
-        meraki_action_batch_retry_wait_time: '60'
-        meraki_retry_4xx_error: false
-        meraki_retry_4xx_error_wait_time: '60'
-        meraki_maximum_retries: '2'
-        meraki_output_log: true
-        meraki_log_file_prefix: meraki_api_
-        meraki_log_path: ''
-        meraki_print_console: true
-        meraki_suppress_logging: false
-        meraki_simulate: false
-        meraki_be_geo_id: ''
-        meraki_caller: ''
-        meraki_use_iterator_for_get_pages: false
-        meraki_inherit_logging_config: false
-        meraki_suppress_logging: true
+        meraki_base_url: "{{ meraki_base_url }}"
+        meraki_single_request_timeout: "{{ meraki_single_request_timeout }}"
+        meraki_certificate_path: "{{ meraki_certificate_path }}"
+        meraki_requests_proxy: "{{ meraki_requests_proxy }}"
+        meraki_wait_on_rate_limit: "{{ meraki_wait_on_rate_limit }}"
+        meraki_nginx_429_retry_wait_time: "{{ meraki_nginx_429_retry_wait_time }}"
+        meraki_action_batch_retry_wait_time: "{{ meraki_action_batch_retry_wait_time }}"
+        meraki_retry_4xx_error: "{{ meraki_retry_4xx_error }}"
+        meraki_retry_4xx_error_wait_time: "{{ meraki_retry_4xx_error_wait_time }}"
+        meraki_maximum_retries: "{{ meraki_maximum_retries }}"
+        meraki_output_log: "{{ meraki_output_log }}"
+        meraki_log_file_prefix: "{{ meraki_log_file_prefix }}"
+        meraki_log_path: "{{ meraki_log_path }}"
+        meraki_print_console: "{{ meraki_print_console }}"
+        meraki_suppress_logging: "{{ meraki_suppress_logging }}"
+        meraki_simulate: "{{ meraki_simulate }}"
+        meraki_be_geo_id: "{{ meraki_be_geo_id }}"
+        meraki_caller: "{{ meraki_caller }}"
+        meraki_use_iterator_for_get_pages: "{{ meraki_use_iterator_for_get_pages }}"
+        meraki_inherit_logging_config: "{{ meraki_inherit_logging_config }}"
         state: present
         serial: "{{ switch1_serial }}"
         name: Uplink to RW-{{ site_abbv }}-01
