--- a/Playbooks/Set_Switchport_Config.yml
+++ b/Playbooks/Set_Switchport_Config.yml
@@ -33,246 +33,295 @@
         meraki_use_iterator_for_get_pages: "{{ meraki_use_iterator_for_get_pages }}"
         meraki_inherit_logging_config: "{{ meraki_inherit_logging_config }}"
         state: present
-        serial: "{{ switch1_serial }}"
-        name: Uplink to RW-{{ site_abbv }}-01
-        type: trunk
-        vlan: 35
-        portId: 1
+        accessPolicyNumber: 2
+        accessPolicyType: Sticky MAC allow list
+        adaptivePolicyGroupId: '123'
+        allowedVlans: 1,3,5-10
+        daiTrusted: false
+        dot3az:
+          enabled: false
+        enabled: true
+        flexibleStackingEnabled: true
+        isolationEnabled: false
+        linkNegotiation: Auto negotiate
+        macAllowList:
+          - 34:56:fe:ce:8e:a0
+          - 34:56:fe:ce:8e:a1
+        name: My switch port
+        peerSgtCapable: false
+        poeEnabled: true
+        portId: string
+        portScheduleId: '1234'
+        profile:
+          enabled: false
+          id: '1284392014819'
+          iname: iname
+        rstpEnabled: true
+        serial: string
+        stickyMacAllowList:
+          - 34:56:fe:ce:8e:b0
+          - 34:56:fe:ce:8e:b1
+        stickyMacAllowListLimit: 5
+        stormControlEnabled: true
+        stpGuard: disabled
+        tags:
+          - tag1
+          - tag2
+        type: access
+        udld: Alert only
+        vlan: 10
+        voiceVlan: 20
+
+
+
+
+#        state: present
+#        serial: "{{ switch1_serial }}"
+#        name: Uplink to RW-{{ site_abbv }}-01
+#        type: trunk
+#        vlan: 35
+#        portId: 1
+
+
+
+
+
+
     
-    - name: Configure switch1 Port2 to AP
-      cisco.meraki.devices_switch_ports:
+#    - name: Configure switch1 Port2 to AP
+#      cisco.meraki.devices_switch_ports:
+##        meraki_suppress_logging: true
+#        state: present         
+#        serial: "{{ switch1_serial }}"
+#        name: Link to {{ site_abbv }}-AP01
+#        type: trunk
+#        vlan: 1
+#        portId: 2
+#
+#    - name: Configure switch1 Port3 to POS Printer
+#      cisco.meraki.devices_switch_ports:
 #        meraki_suppress_logging: true
-        state: present         
-        serial: "{{ switch1_serial }}"
-        name: Link to {{ site_abbv }}-AP01
-        type: trunk
-        vlan: 1
-        portId: 2
-
-    - name: Configure switch1 Port3 to POS Printer
-      cisco.meraki.devices_switch_ports:
-        meraki_suppress_logging: true
-        state: present         
-        serial: "{{ switch1_serial }}"
-        name: POS Printer
-        type: access
-        vlan: 20
-        portId: 3
-
-    - name: Configure switch1 Port4 to Printer
-      cisco.meraki.devices_switch_ports:
-        meraki_suppress_logging: true
-        state: present         
-        serial: "{{ switch1_serial }}"
-        name: Printer 2
-        type: access
-        vlan: 20
-        portId: 4
-
-    - name: Configure switch1 Port5
-      cisco.meraki.devices_switch_ports:
-        meraki_suppress_logging: true
-        state: present         
-        serial: "{{ switch1_serial }}"
-        name: User Access 
-        type: access
-        vlan: 10
-        voiceVlan: 11
-        portId: 5
-
-    - name: Configure switch1 Port6
-      cisco.meraki.devices_switch_ports:
-        meraki_suppress_logging: true
-        state: present         
-        serial: "{{ switch1_serial }}"
-        name: User Access 
-        type: access
-        vlan: 10
-        voiceVlan: 11
-        portId: 6
-
-    - name: Configure switch1 Port7
-      cisco.meraki.devices_switch_ports:
-        meraki_suppress_logging: true
-        state: present         
-        serial: "{{ switch1_serial }}"
-        name: User Access 
-        type: access
-        vlan: 10
-        voiceVlan: 11
-        portId: 7
-
-    - name: Configure switch1 Port8
-      cisco.meraki.devices_switch_ports:
-        meraki_suppress_logging: true
-        state: present         
-        serial: "{{ switch1_serial }}"
-        name: User Access 
-        type: access
-        vlan: 10
-        portId: 8
-
-    - name: Configure switch1 Port9
-      cisco.meraki.devices_switch_ports:
-        meraki_suppress_logging: true
-        state: present         
-        serial: "{{ switch1_serial }}"
-        name: User Access 
-        type: access
-        vlan: 10
-        portId: 9
-
-    - name: Configure switch1 Port10
-      cisco.meraki.devices_switch_ports:
-        meraki_suppress_logging: true
-        state: present         
-        serial: "{{ switch1_serial }}"
-        name: User Access 
-        type: access
-        vlan: 10
-        portId: 10
-
-    - name: Configure switch1 Port11
-      cisco.meraki.devices_switch_ports:
-        meraki_suppress_logging: true
-        state: present         
-        serial: "{{ switch1_serial }}"
-        name: User Access 
-        type: access
-        vlan: 10
-        portId: 11
-
-    - name: Configure switch1 Port12
-      cisco.meraki.devices_switch_ports:
-        meraki_suppress_logging: true
-        state: present         
-        serial: "{{ switch1_serial }}"
-        name: User Access 
-        type: access
-        vlan: 10
-        portId: 12
-
-    - name: Configure switch1 Port13
-      cisco.meraki.devices_switch_ports:
-        meraki_suppress_logging: true
-        state: present         
-        serial: "{{ switch1_serial }}"
-        name: User Access 
-        type: access
-        vlan: 10
-        portId: 13
-
-    - name: Configure switch1 Port14
-      cisco.meraki.devices_switch_ports:
-        meraki_suppress_logging: true
-        state: present         
-        serial: "{{ switch1_serial }}"
-        name: User Access 
-        type: access
-        vlan: 10
-        portId: 14
-
-    - name: Configure switch1 Port15
-      cisco.meraki.devices_switch_ports:
-        meraki_suppress_logging: true
-        state: present         
-        serial: "{{ switch1_serial }}"
-        name: User Access 
-        type: access
-        vlan: 10
-        portId: 15
-
-    - name: Configure switch1 Port16
-      cisco.meraki.devices_switch_ports:
-        meraki_suppress_logging: true
-        state: present         
-        serial: "{{ switch1_serial }}"
-        name: User Access 
-        type: access
-        vlan: 10
-        portId: 16
-
-    - name: Configure switch1 Port17
-      cisco.meraki.devices_switch_ports:
-        meraki_suppress_logging: true
-        state: present         
-        serial: "{{ switch1_serial }}"
-        name: User Access 
-        type: access
-        vlan: 10
-        portId: 17
-
-    - name: Configure switch1 Port18
-      cisco.meraki.devices_switch_ports:
-        meraki_suppress_logging: true
-        state: present         
-        serial: "{{ switch1_serial }}"
-        name: User Access 
-        type: access
-        vlan: 10
-        portId: 18
-
-    - name: Configure switch1 Port19
-      cisco.meraki.devices_switch_ports:
-        meraki_suppress_logging: true
-        state: present         
-        serial: "{{ switch1_serial }}"
-        name: User Access 
-        type: access
-        vlan: 10
-        portId: 19
-
-    - name: Configure switch1 Port20
-      cisco.meraki.devices_switch_ports:
-        meraki_suppress_logging: true
-        state: present         
-        serial: "{{ switch1_serial }}"
-        name: User Access 
-        type: access
-        vlan: 10
-        portId: 20
-        enabled: false
-
-    - name: Configure switch1 Port21
-      cisco.meraki.devices_switch_ports:
-        meraki_suppress_logging: true
-        state: present         
-        serial: "{{ switch1_serial }}"
-        name: User Access 
-        type: access
-        vlan: 10
-        portId: 21
-        enabled: false
-
-    - name: Configure switch1 Port22
-      cisco.meraki.devices_switch_ports:
-        meraki_suppress_logging: true
-        state: present         
-        serial: "{{ switch1_serial }}"
-        name: User Access 
-        type: access
-        vlan: 10
-        portId: 22
-        enabled: false
-
-    - name: Configure switch1 Port23
-      cisco.meraki.devices_switch_ports:
-        meraki_suppress_logging: true
-        state: present         
-        serial: "{{ switch1_serial }}"
-        name: User Access 
-        type: access
-        vlan: 10
-        portId: 23
-        enabled: false
-
-    - name: Configure switch1 Port24
-      cisco.meraki.devices_switch_ports:
-        meraki_suppress_logging: true
-        state: present         
-        serial: "{{ switch1_serial }}"
-        name: User Access 
-        type: access
-        vlan: 10
-        portId: 24
-        enabled: false
+#        state: present         
+#        serial: "{{ switch1_serial }}"
+#        name: POS Printer
+#        type: access
+#        vlan: 20
+#        portId: 3
+#
+#    - name: Configure switch1 Port4 to Printer
+#      cisco.meraki.devices_switch_ports:
+#        meraki_suppress_logging: true
+#        state: present         
+#        serial: "{{ switch1_serial }}"
+#        name: Printer 2
+#        type: access
+#        vlan: 20
+#        portId: 4
+#
+#    - name: Configure switch1 Port5
+#      cisco.meraki.devices_switch_ports:
+#        meraki_suppress_logging: true
+#        state: present         
+#        serial: "{{ switch1_serial }}"
+#        name: User Access 
+#        type: access
+#        vlan: 10
+#        voiceVlan: 11
+#        portId: 5
+#
+#    - name: Configure switch1 Port6
+#      cisco.meraki.devices_switch_ports:
+#        meraki_suppress_logging: true
+#        state: present         
+#        serial: "{{ switch1_serial }}"
+#        name: User Access 
+#        type: access
+#        vlan: 10
+#        voiceVlan: 11
+#        portId: 6
+#
+#    - name: Configure switch1 Port7
+#      cisco.meraki.devices_switch_ports:
+#        meraki_suppress_logging: true
+#        state: present         
+#        serial: "{{ switch1_serial }}"
+#        name: User Access 
+#        type: access
+#        vlan: 10
+#        voiceVlan: 11
+#        portId: 7
+#
+#    - name: Configure switch1 Port8
+#      cisco.meraki.devices_switch_ports:
+#        meraki_suppress_logging: true
+#        state: present         
+#        serial: "{{ switch1_serial }}"
+#        name: User Access 
+#        type: access
+#        vlan: 10
+#        portId: 8
+#
+#    - name: Configure switch1 Port9
+#      cisco.meraki.devices_switch_ports:
+#        meraki_suppress_logging: true
+#        state: present         
+#        serial: "{{ switch1_serial }}"
+#        name: User Access 
+#        type: access
+#        vlan: 10
+#        portId: 9
+#
+#    - name: Configure switch1 Port10
+#      cisco.meraki.devices_switch_ports:
+#        meraki_suppress_logging: true
+#        state: present         
+#        serial: "{{ switch1_serial }}"
+#        name: User Access 
+#        type: access
+#        vlan: 10
+#        portId: 10
+#
+#    - name: Configure switch1 Port11
+#      cisco.meraki.devices_switch_ports:
+#        meraki_suppress_logging: true
+#        state: present         
+#        serial: "{{ switch1_serial }}"
+#        name: User Access 
+#        type: access
+#        vlan: 10
+#        portId: 11
+#
+#    - name: Configure switch1 Port12
+#      cisco.meraki.devices_switch_ports:
+#        meraki_suppress_logging: true
+#        state: present         
+#        serial: "{{ switch1_serial }}"
+#        name: User Access 
+#        type: access
+#        vlan: 10
+#        portId: 12
+#
+#    - name: Configure switch1 Port13
+#      cisco.meraki.devices_switch_ports:
+#        meraki_suppress_logging: true
+#        state: present         
+#        serial: "{{ switch1_serial }}"
+#        name: User Access 
+#        type: access
+#        vlan: 10
+#        portId: 13
+#
+#    - name: Configure switch1 Port14
+#      cisco.meraki.devices_switch_ports:
+#        meraki_suppress_logging: true
+#        state: present         
+#        serial: "{{ switch1_serial }}"
+#        name: User Access 
+#        type: access
+#        vlan: 10
+#        portId: 14
+#
+#    - name: Configure switch1 Port15
+#      cisco.meraki.devices_switch_ports:
+#        meraki_suppress_logging: true
+#        state: present         
+#        serial: "{{ switch1_serial }}"
+#        name: User Access 
+#        type: access
+#        vlan: 10
+#        portId: 15
+#
+#    - name: Configure switch1 Port16
+#      cisco.meraki.devices_switch_ports:
+#        meraki_suppress_logging: true
+#        state: present         
+#        serial: "{{ switch1_serial }}"
+#        name: User Access 
+#        type: access
+#        vlan: 10
+#        portId: 16
+#
+#    - name: Configure switch1 Port17
+#      cisco.meraki.devices_switch_ports:
+#        meraki_suppress_logging: true
+#        state: present         
+#        serial: "{{ switch1_serial }}"
+#        name: User Access 
+#        type: access
+#        vlan: 10
+#        portId: 17
+#
+#    - name: Configure switch1 Port18
+#      cisco.meraki.devices_switch_ports:
+#        meraki_suppress_logging: true
+#        state: present         
+#        serial: "{{ switch1_serial }}"
+#        name: User Access 
+#        type: access
+#        vlan: 10
+#        portId: 18
+#
+#    - name: Configure switch1 Port19
+#      cisco.meraki.devices_switch_ports:
+#        meraki_suppress_logging: true
+#        state: present         
+#        serial: "{{ switch1_serial }}"
+#        name: User Access 
+#        type: access
+#        vlan: 10
+#        portId: 19
+#
+#    - name: Configure switch1 Port20
+#      cisco.meraki.devices_switch_ports:
+#        meraki_suppress_logging: true
+#        state: present         
+#        serial: "{{ switch1_serial }}"
+#        name: User Access 
+#        type: access
+#        vlan: 10
+#        portId: 20
+#        enabled: false
+#
+#    - name: Configure switch1 Port21
+#      cisco.meraki.devices_switch_ports:
+#        meraki_suppress_logging: true
+#        state: present         
+#        serial: "{{ switch1_serial }}"
+#        name: User Access 
+#        type: access
+#        vlan: 10
+#        portId: 21
+#        enabled: false
+#
+#    - name: Configure switch1 Port22
+#      cisco.meraki.devices_switch_ports:
+#        meraki_suppress_logging: true
+#        state: present         
+#        serial: "{{ switch1_serial }}"
+#        name: User Access 
+#        type: access
+#        vlan: 10
+#        portId: 22
+#        enabled: false
+#
+#    - name: Configure switch1 Port23
+#      cisco.meraki.devices_switch_ports:
+#        meraki_suppress_logging: true
+#        state: present         
+#        serial: "{{ switch1_serial }}"
+#        name: User Access 
+#        type: access
+#        vlan: 10
+#        portId: 23
+#        enabled: false
+#
+#    - name: Configure switch1 Port24
+#      cisco.meraki.devices_switch_ports:
+#        meraki_suppress_logging: true
+#        state: present         
+#        serial: "{{ switch1_serial }}"
+#        name: User Access 
+#        type: access
+#        vlan: 10
+#        portId: 24
+#        enabled: false
