--- a/Playbooks/Set_Switchport_Config.yml
+++ b/Playbooks/Set_Switchport_Config.yml
@@ -33,60 +33,17 @@
         meraki_use_iterator_for_get_pages: "{{ meraki_use_iterator_for_get_pages }}"
         meraki_inherit_logging_config: "{{ meraki_inherit_logging_config }}"
         state: present
-        accessPolicyNumber: 2
-        accessPolicyType: Sticky MAC allow list
-        adaptivePolicyGroupId: '123'
-        allowedVlans: 1,3,5-10
-        daiTrusted: false
-        dot3az:
-          enabled: false
-        enabled: true
-        flexibleStackingEnabled: true
-        isolationEnabled: false
-        linkNegotiation: Auto negotiate
-        macAllowList:
-          - 34:56:fe:ce:8e:a0
-          - 34:56:fe:ce:8e:a1
-        name: My switch port
-        peerSgtCapable: false
-        poeEnabled: true
-        portId: string
-        portScheduleId: '1234'
-        profile:
-          enabled: false
-          id: '1284392014819'
-          iname: iname
-        rstpEnabled: true
-        serial: string
-        stickyMacAllowList:
-          - 34:56:fe:ce:8e:b0
-          - 34:56:fe:ce:8e:b1
-        stickyMacAllowListLimit: 5
-        stormControlEnabled: true
-        stpGuard: disabled
-        tags:
-          - tag1
-          - tag2
-        type: access
-        udld: Alert only
-        vlan: 10
-        voiceVlan: 20
-
-
-
-
-#        state: present
-#        serial: "{{ switch1_serial }}"
-#        name: Uplink to RW-{{ site_abbv }}-01
-#        type: trunk
-#        vlan: 35
-#        portId: 1
+        serial: "{{ switch1_serial }}"
+        name: Uplink to RW-{{ site_abbv }}-01
+        type: trunk
+        vlan: 35
+        portId: 1
 
 
 
 
 
-
+        
     
 #    - name: Configure switch1 Port2 to AP
 #      cisco.meraki.devices_switch_ports:
