--- a/Playbooks/Set_Switchport_Config.yml
+++ b/Playbooks/Set_Switchport_Config.yml
@@ -37,7 +37,7 @@
         name: Uplink to RW-{{ site_abbv }}-01
         type: trunk
         vlan: 35
-        portId: 1
+        portId: "1"
 
 
 
