--- a/Playbooks/Set_Switchport_Config.yml
+++ b/Playbooks/Set_Switchport_Config.yml
@@ -33,7 +33,7 @@
         meraki_inherit_logging_config: "{{ meraki_inherit_logging_config }}"
         state: present
         serial: "{{ switch1_serial }}"
-        name: Uplink to RW-{{ site_abbv }}-01
+        #name: Uplink to RW-{{ site_abbv }}-01
         type: trunk
         vlan: 35
         portId: 1
