--- a/Playbooks/Set_Switchport_Config.yml
+++ b/Playbooks/Set_Switchport_Config.yml
@@ -6,7 +6,7 @@
   gather_facts: false
   vars:
     switch1_serial: Q2KP-MWTJ-YLMN
-    site_abbv: SYD
+    site_abbv: MEL
 
   tasks:
     - name: Configure Switch1 Port1 To Router
@@ -32,53 +32,11 @@
         meraki_use_iterator_for_get_pages: "{{ meraki_use_iterator_for_get_pages }}"
         meraki_inherit_logging_config: "{{ meraki_inherit_logging_config }}"
         state: present
-        accessPolicyNumber: 2
-        accessPolicyType: Sticky MAC allow list
-        adaptivePolicyGroupId: '123'
-        allowedVlans: 1,3,5-10
-        daiTrusted: false
-        dot3az:
-          enabled: false
-        enabled: true
-        flexibleStackingEnabled: true
-        isolationEnabled: false
-        linkNegotiation: Auto negotiate
-        macAllowList:
-          - 34:56:fe:ce:8e:a0
-          - 34:56:fe:ce:8e:a1
-        name: My switch port
-        peerSgtCapable: false
-        poeEnabled: true
+        serial: "{{ switch1_serial }}"
+        name: Uplink to RW-{{ site_abbv }}-01
+        type: trunk
+        vlan: 35
         portId: 1
-        portScheduleId: '1234'
-        profile:
-          enabled: false
-          id: '1284392014819'
-          iname: iname
-        rstpEnabled: true
-        serial: Q2KP-MWTJ-YLMN
-        stickyMacAllowList:
-          - 34:56:fe:ce:8e:b0
-          - 34:56:fe:ce:8e:b1
-        stickyMacAllowListLimit: 5
-        stormControlEnabled: true
-        stpGuard: disabled
-        tags:
-          - tag1
-          - tag2
-        type: access
-        udld: Alert only
-        vlan: 10
-        voiceVlan: 20
-
-
-
-
-#        serial: "{{ switch1_serial }}"
-        #name: Uplink to RW-{{ site_abbv }}-01
-#        type: trunk
-#        vlan: 35
-#        portId: 1
 
 
 
