--- a/Playbooks/Set_Switchport_Config.yml
+++ b/Playbooks/Set_Switchport_Config.yml
@@ -5,7 +5,7 @@
 - hosts: localhost
   gather_facts: false
   vars:
-    switch1_serial: Q2KP-MWTJ-YLMN
+    switch1_serial: "Q2KP-MWTJ-YLMN"
     site_abbv: MEL
 
   tasks:
@@ -35,8 +35,8 @@
         serial: "{{ switch1_serial }}"
         name: Uplink to RW-{{ site_abbv }}-01
         type: trunk
-        vlan: 35
-        portId: 1
+        vlan: "35"
+        portId: "1"
 
 
 
