--- a/Playbooks/Set_APN.yaml
+++ b/Playbooks/Set_APN.yaml
@@ -9,7 +9,7 @@
       cisco.meraki.devices_cellular_sims:
         meraki_api_key: "{{ meraki_api_key }}"
         state: present
-        serial: Q2##-####-####
+        serial: "{{ serial_device }}"
         simFailover:
             enabled: false
             timeout: 300
