--- a/Playbooks/Create_Network_Update_2_Beta.yaml
+++ b/Playbooks/Create_Network_Update_2_Beta.yaml
@@ -2,10 +2,8 @@
 - name: Create Networks and Schedule Firmware
   hosts: localhost
   gather_facts: false
-  vars_files:
-    - credentials-home.yml
   vars:
-    organization_id: "{{ org_id }}"  # Fawbert Org ID
+    organization_id: "{{ org_id }}" 
     time_zone: Australia/Sydney
     product_types:
       - switch
@@ -22,14 +20,12 @@
         name: "{{ item }}"
         productTypes: "{{ product_types }}"
         timeZone: "{{ time_zone }}"
-        meraki_api_key: "{{ meraki_api_key }}"
       loop: "{{ network_names | from_yaml }}"
       register: create_results
 
     - name: Get all networks in the org
       cisco.meraki.networks_info:
         organizationId: "{{ organization_id }}"
-        meraki_api_key: "{{ meraki_api_key }}"
       register: all_networks
 
     - name: Filter networks with naming convention 'Network-#'
@@ -39,7 +35,6 @@
 
     - name: Get latest beta firmware ID for Security appliance (from first filtered network)
       cisco.meraki.networks_firmware_upgrades_info:
-        meraki_api_key: "{{ meraki_api_key }}"
         networkId: "{{ filtered_networks[0].id }}"
       register: firmware_info
       when: filtered_networks | length > 0
@@ -57,7 +52,6 @@
 
     - name: Schedule firmware update for all filtered networks
       cisco.meraki.networks_firmware_upgrades:
-        meraki_api_key: "{{ meraki_api_key }}"
         networkId: "{{ item.id }}"
         products:
           appliance:
